--- a/package.json
+++ b/package.json
@@ -7,10 +7,8 @@
     "explore": "gridsome explore"
   },
   "dependencies": {
-    "animate.css": "^3.7.2",
     "gridsome": "^0.6.0",
-    "gridsome-plugin-tailwindcss": "^2.2.19",
-    "vue-visible-class": "^1.0.0"
+    "gridsome-plugin-tailwindcss": "^2.2.19"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.10.1"
