--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "explore": "gridsome explore"
   },
   "dependencies": {
+    "@gridsome/plugin-sitemap": "^0.2.2",
     "gridsome": "^0.6.0",
     "gridsome-plugin-tailwindcss": "^2.2.19"
   },
